<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".SigningActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_request"
        android:visibility="visible"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="257dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/login_username"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
       />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Retipe password"
         />



    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
      />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:text="SIGN UP" />
    <Button
        android:id="@+id/btsignin"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:text="@string/btnsignin" />



</LinearLayout>